Rename to Bodart

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
     <div class="l-left-side">
         <a href=".">
             <div class="site-title">
-                <h1>Dr. Natalie Rodriguez</h1>
+                <h1>Dr. Natalie Bodart</h1>
                 <h2>Clinical Psychologist</h2>
             </div>
         </a>
