--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -2,8 +2,8 @@
 <html class="{{#if subPage}}sub{{/if}}">
 <head>
     <meta charset="utf-8">
-    <title>Natalie Rodriguez &middot; Clinical Psychologist</title>
-    <meta name="description" content="Dr Natalie Rodriguez. Clinical Psychology Private Practice. Central London. Introduction to Natalie Rodriguez, services offered, sessions, values and ethics and resources. Contact details.">
+    <title>Natalie Bodart &middot; Clinical Psychologist</title>
+    <meta name="description" content="Dr Natalie Bodart. Clinical Psychology Private Practice. Central London. Introduction to Natalie Bodart, services offered, sessions, values and ethics and resources. Contact details.">
     <meta name="viewport" content="width=device-width">
     <link href="http://fonts.googleapis.com/css?family=Raleway:200,400,800" rel="stylesheet" type="text/css">
     <link href="/static/css/normalize.css" rel="stylesheet" type="text/css">
@@ -15,7 +15,7 @@
         <header class="main-header">
             <a href="/">
                 <div class="site-title">
-                    <h1>Dr. Natalie Rodriguez</h1>
+                    <h1>Dr. Natalie Bodart</h1>
                     <h2>Clinical Psychologist</h2>
                 </div>
             </a>
@@ -24,12 +24,12 @@
         {{{content}}}
         <div class="section contact" id="contact">
             <div class="contact-items">
-                <p><span class="contact-type">Email</span> <a href="mailto:natalie@natalierodriguez.co.uk">natalie@natalierodriguez.co.uk</a></p>
+                <p><span class="contact-type">Email</span> <a href="mailto:natalie@nataliebodart.co.uk">natalie@nataliebodart.co.uk</a></p>
                 <p><span class="contact-type">Phone</span> <a href="tel:07934409949">07934409949</a></p>
                 <p><span class="contact-type">Address</span> 17/18 Margaret Street, London W1W 8RP</p>
             </div>
             <div class="footer">
-                <p>Copyright &copy; 2013 Natalie Rodriguez. Website by <a href="http://parkface.com/">Parkface</a> &amp; <a href="http://seisaku.co.uk">Seisaku</a></p>
+                <p>Copyright &copy; 2013 Natalie Bodart. Website by <a href="http://parkface.com/">Parkface</a> &amp; <a href="http://seisaku.co.uk">Seisaku</a></p>
             </div>
         </div>
     </div>
