--- a/views/sub-pages/contact.hbs
+++ b/views/sub-pages/contact.hbs
@@ -1,6 +1,6 @@
 <div class="section sub-page">
     <h3>Contact details</h3>
-    <p>Email <a href="mailto:natalie@natalierodriguez.co.uk">natalie@natalierodriguez.co.uk</a></p>
+    <p>Email <a href="mailto:natalie@nataliebodart.co.uk">natalie@nataliebodart.co.uk</a></p>
     <p>Phone <a href="tel:07934409949">07934409949</a></p>
     <p>17/18 Margaret Street<br/>London<br/>W1W 8RP</p>
     <iframe width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=W1W%208RP&key=AIzaSyA1lhBWfdqGoQyd3Y6Yt7CwVVCv3KpKtcw"></iframe>
